--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
-<!--  -->
+
   <title>Portfolio</title>
 </head>
 <body>  
@@ -34,7 +35,16 @@
        
       </ul>
     </nav>
-    <section></section>
+
+    <section class="backg">
+      <div class="divSe1">
+        <a class="a1Se1">O</a><br>
+        <a class="a2Se1">começo </a><br>
+        <a class="a3Se1">de </a><br>
+        <a class="a4Se1">uma</a><br>
+        <a class="a5Se1">Jornada</a><br>
+      </div> 
+    </section>
     
     <script src="script.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
