Mudando algumas tag <a>, alterando textos e adicionando botão de começo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 
@@ -38,12 +40,15 @@
 
     <section class="backg">
       <div class="divSe1">
-        <a class="a1Se1">O</a><br>
-        <a class="a2Se1">começo </a><br>
-        <a class="a3Se1">de </a><br>
-        <a class="a4Se1">uma</a><br>
-        <a class="a5Se1">Jornada</a><br>
+        <a class="a1Se1">Olá visitante, me chamo Otávio e tenho 18 anos! </a><br>
+        <a class="a2Se1">Sou estudante de Desenvolvimento Web e Design Gráfico. </a><br>
+        <a class="a3Se1">Como todas as histórias, essa também precisa de um começo, </a><br>
+        <a class="a4Se1">então, conheça minha história abaixo.</a>
+        <button class="inicioBtn"type="button">Começo</button>
       </div> 
+      <div class="div2Se1"></div>
+      </div>
+      <button type="submit" class="inicioBtn" function="teste">Começo</button>
     </section>
     
     <script src="script.js"></script>
