--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 
   <title>Portfolio</title>
@@ -41,19 +40,15 @@
     <section class="backg">
       <div class="divSe1">
         <a class="a1Se1">Olá visitante, me chamo Otávio e tenho 18 anos! </a><br>
-        <a class="a2Se1">Sou estudante de Desenvolvimento Web e Design Gráfico. </a><br>
-        <a class="a3Se1">Como todas as histórias, essa também precisa de um começo, </a><br>
-        <a class="a4Se1">então, conheça minha história abaixo.</a>
-        <button class="inicioBtn"type="button">Começo</button>
+        <a class="a2Se1">Sou estudante de Desenvolvimento Web e Design GFX. </a><br>
+        <a class="a3Se1">Seja bem-vindo(a) a minha história :) </a><br>
+        <button class="inicioBtn"type="button" onclick="">Começo</button>
       </div> 
       <div class="div2Se1"></div>
       </div>
-      <button type="submit" class="inicioBtn" function="teste">Começo</button>
     </section>
     
     <script src="script.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
+    
 </body>
 </html>
