About: Adicionando extensão da seção about

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
       </div>
     </section>
     
+    <section class="about">
+      <div class="divAbout">
+      </div>
+    </section>
     <script src="script.js"></script>
     
 </body>
