Arrumando detalhes da home

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a class="nav-link" href="#">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Digital Art</a>   
+          <a class="nav-link" href="#">Arts</a>   
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
@@ -40,6 +40,8 @@
   
     <button class="inicioBtn"type="button" onclick="">Começo</button>
     <section class="backg">
+        <div class="img">
+        </div>
       
         <a class="a1Se1">Olá visitante, me chamo Otávio e tenho 18 anos! </a><br>
         <a class="a2Se1">Sou estudante de Desenvolvimento Web e Design GFX. </a><br>
