Adicionando prompt da section about com suas cores e textos definidos

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
           <a class="nav-link" href="#About">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="#Project">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Arts</a>   
+          <a class="nav-link" href="#Art">Arts</a>   
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="#Contact">Contact</a>
         </li> 
        
       </ul>
@@ -95,7 +95,32 @@
    
           <a class="hatTitle">Technician: System Analysis and Development</a>
           <a class="hatSchool">Etec Taboão da Serra</a>
-      
+
+    </section>
+          <div class="retNavAbout"></div>
+          <div class="retBlueAbout"></div>
+          <div class="retYellowAbout"></div>
+          <div class="retRedAbout"></div>
+          <div class="retNavAbout"></div>
+          <a class="promptTituloAbout">Otavio Portfolio Prompt</a>
+          <a class="versionTxtAbout">Portfolio System [version 1.0]</a>
+          <a class="myLifeAbout">C:\Whereitallbegan> MyLife.bat</a>
+          <a class="historyAbout"> Minha história com tecnologia começa desde criança.
+             Desde os meus primeiros 4 anos de vida já tive o privilégio de poder me desenvolver jogando um fantástico megadrive que rendeu grandes lembranças. 
+             Então, com 7 anos de idade, meus pais me presentiaram com um computador que era popular entre as familias brasileiras da época. 
+             A partir disso, nunca mais parei de interagir com esse mundo de infinitas possibilidades. 
+             Aos 17 anos, dou inicio a um curso técnico em análise e desenvolvimento de sistemas que me proporcinou conhecer a arte de se programar,
+              e assim poder decidir como eu iria me expressar para a sociedade.</a>
+
+    <section id="Project" class="Project">
+
+    </section>
+
+    <section id="Art" class="Art">
+
+    </section>
+
+    <section id="Contact" class="Contact">
 
     </section>
     <script src="script.js"></script>
