Arrumando posicionamento do prompt da section About

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
       <div class="whiteRetAbout">
         <a class="techTitle">Technologies</a>
         <div class="lineDivide"></div>
+        <div class="lineDivideBlue"></div>
+        <div class="lineDivideRed"></div>
         <a class="softwareTitle">Softwares</a>
 
         <div class="jsSvg"></div>
