Adicionando section Projects; definindo estrutura; posicionando quadros

--- a/index.html
+++ b/index.html
@@ -115,7 +115,14 @@
               e assim poder decidir como eu iria me expressar para a sociedade.</a>
 
     <section id="Project" class="Project">
-
+          <div class="whiteRetProject">
+            <div class="ret1White"></div>
+            <div class="ret2White"></div>
+          </div>
+          <div class="ret1Black"></div>
+          <div class="ret2Black"></div>
+          <div class="ret3Black"></div>
+          <div class="ret4Black"></div>
     </section>
 
     <section id="Art" class="Art">
